--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "quickchart-js": "^3.1.3"
   },
   "devDependencies": {
     "@types/node": "^22.15.17"
