--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "express": "^5.1.0",
+    "node-fetch": "^3.3.2",
     "quickchart-js": "^3.1.3"
   },
   "devDependencies": {
